--- a/portfolio.html
+++ b/portfolio.html
@@ -220,6 +220,7 @@
                 </address>
             </div>
             <!-- social links -->
+    
             <div class="footer-wrapper">
                 <span class="join">присоединяйтесь</span>
                 <ul class="social-list footer">
@@ -253,7 +254,24 @@
                     </li>
                 </ul>
             </div>
-        </div>
+            <!-- subscribe -->
+            <div class="subscribe">
+                <span class="subscribe-text">подпишитесь на рассылку</span>
+                <div class="footer-form">
+                    <form action="" class="subscribe-form">
+                        <label for="email" class="subsribe-label">
+                            <input type="email" name="email" class="subscribe-input" autocomplete="off"
+                                placeholder="E-mail">
+                        </label>
+                    </form>
+                    <button class="button sub" type="submit"><span class="button-text">Подписаться</span><svg
+                            class="footer-icon" width="24px" height="24px">
+                            <use href="./images/icons.svg#icon-icon-send"></use>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+    
     </footer>
         <script src="./js/modal.js"></script>
 </body>
