--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                             </button>
                     </div>
                 </div>
-                
+                </div>
             </footer>
         
     </main>
