--- a/portfolio.html
+++ b/portfolio.html
@@ -222,7 +222,7 @@
             <!-- social links -->
     
             <div class="footer-wrapper">
-                <span class="join">присоединяйтесь</span>
+                <p class="join">присоединяйтесь</p>
                 <ul class="social-list footer">
                     <li class="social-item">
                         <a href="" class="social-link clients">
@@ -256,7 +256,7 @@
             </div>
             <!-- subscribe -->
             <div class="subscribe">
-                <span class="subscribe-text">подпишитесь на рассылку</span>
+                <p class="subscribe-text">подпишитесь на рассылку</p>
                 <div class="footer-form">
                     <form action="" class="subscribe-form">
                         <label for="email" class="subsribe-label">
@@ -271,7 +271,7 @@
                     </button>
                 </div>
             </div>
-    
+        </div>
     </footer>
 </body>
 
