Прошел валидацию хтмл

--- a/portfolio.html
+++ b/portfolio.html
@@ -258,8 +258,8 @@
             <div class="subscribe">
                 <p class="subscribe-text">подпишитесь на рассылку</p>
                 <div class="footer-form">
-                    <form action="" class="subscribe-form">
-                        <label for="email" class="subsribe-label">
+                    <form action="form-footer" class="subscribe-form">
+                        <label class="subsribe-label">
                             <input type="email" name="email" class="subscribe-input" autocomplete="off"
                                 placeholder="E-mail">
                         </label>
